feat: implements forge mod loader